refactor(tests): JUnit 5 migration: webapps/assembly (#883)
Migration of module webapps/assembly to JUnit 5

Notable changes:

- Refactored HeaderRule to JUnit 5 extension
- TestHelper#assertAndEnsureCleanDbAndCache clears also metrics
- ProcessEngineExtension does not clear operation log before test execution
- refactored CookieConfigurator and added unit test